Fixing the header z-index.

--- a/src/pages/viewActivity/viewActivity.css
+++ b/src/pages/viewActivity/viewActivity.css
@@ -14,7 +14,7 @@
   padding: 20px;
   padding-bottom: 30px;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   background-color: #6D9DC5;
 }
 
@@ -33,7 +33,7 @@
   max-height: 300px;
   filter: opacity(30%);
   background-size: cover;
-  background-position: top; 
+  background-position: top;
 }
 
 #activity-info__main {
